--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ repository = "https://github.com/noneplugin/nonebot-plugin-cchess"
 python = "^3.7.3"
 nonebot2 = "^2.0.0-beta.1"
 nonebot-adapter-onebot = "^2.0.0-beta.1"
+Pillow = ">=8.0.0"
 
 [tool.poetry.dev-dependencies]
 nb-cli = "^0.6.0"
