--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "nonebot_plugin_cchess"
-version = "0.1.5"
+version = "0.1.6"
 description = "Nonebot2 象棋插件"
 authors = ["meetwq <meetwq@gmail.com>"]
 license = "MIT"
@@ -10,9 +10,9 @@ repository = "https://github.com/noneplugin/nonebot-plugin-cchess"
 
 [tool.poetry.dependencies]
 python = "^3.7.3"
-nonebot2 = "^2.0.0-beta.1"
+nonebot2 = "^2.0.0-beta.4"
 nonebot-adapter-onebot = "^2.0.0-beta.1"
-Pillow = ">=8.0.0"
+Pillow = "^9.0.0"
 nonebot-plugin-datastore = "^0.3.0"
 
 [tool.poetry.dev-dependencies]
