--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "nonebot_plugin_cchess"
-version = "0.1.12"
+version = "0.2.0"
 description = "Nonebot2 象棋插件"
 authors = ["meetwq <meetwq@gmail.com>"]
 license = "MIT"
@@ -10,13 +10,12 @@ repository = "https://github.com/noneplugin/nonebot-plugin-cchess"
 
 [tool.poetry.dependencies]
 python = "^3.8"
-nonebot2 = "^2.0.0-rc.1"
-nonebot-adapter-onebot = "^2.0.0-beta.1"
+nonebot2 = { version = "^2.0.0-rc.1", extras = ["fastapi"] }
+nonebot-adapter-onebot = "^2.2.0"
 Pillow = "^9.0.0"
-nonebot-plugin-datastore = "^0.4.0"
+nonebot-plugin-datastore = "^0.5.0"
 
-[tool.poetry.dev-dependencies]
-nb-cli = "^0.6.0"
+[tool.poetry.group.dev.dependencies]
 black = "^22.1.0"
 
 [build-system]
