--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,7 +16,11 @@ Pillow = "^9.0.0"
 nonebot-plugin-datastore = "^0.5.0"
 
 [tool.poetry.group.dev.dependencies]
+nb-cli = "^1.0.0"
 black = "^22.1.0"
+
+[tool.nonebot]
+plugins = ["nonebot_plugin_cchess"]
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
