--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "nonebot_plugin_cchess"
-version = "0.2.1"
+version = "0.2.2"
 description = "Nonebot2 象棋插件"
 authors = ["meetwq <meetwq@gmail.com>"]
 license = "MIT"
@@ -13,7 +13,7 @@ python = "^3.8"
 nonebot2 = { version = "^2.0.0-rc.1", extras = ["fastapi"] }
 nonebot-adapter-onebot = "^2.2.0"
 Pillow = "^9.0.0"
-nonebot-plugin-datastore = "^0.5.0"
+nonebot-plugin-datastore = "^0.6.0a1"
 
 [tool.poetry.group.dev.dependencies]
 nb-cli = "^1.0.0"
