--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "nonebot_plugin_cchess"
-version = "0.3.0"
+version = "0.3.1"
 description = "Nonebot2 象棋插件"
 authors = ["meetwq <meetwq@gmail.com>"]
 license = "MIT"
@@ -11,11 +11,11 @@ repository = "https://github.com/noneplugin/nonebot-plugin-cchess"
 [tool.poetry.dependencies]
 python = "^3.8"
 nonebot2 = { version = "^2.0.0", extras = ["fastapi"] }
-nonebot-plugin-send-anything-anywhere = "^0.2.7"
-nonebot-plugin-session = ">=0.0.5,<0.1.0"
-nonebot-plugin-userinfo = ">=0.0.1,<0.1.0"
+nonebot-plugin-send-anything-anywhere = "^0.3.0"
+nonebot-plugin-session = "^0.1.0"
+nonebot-plugin-userinfo = "^0.1.0"
 nonebot-plugin-datastore = "^1.0.0"
-Pillow = "^9.0.0"
+Pillow = ">=9.2.0,<11.0.0"
 
 [tool.poetry.group.dev.dependencies]
 nb-cli = "^1.0.0"
