--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,8 +12,7 @@ repository = "https://github.com/noneplugin/nonebot-plugin-cchess"
 python = "^3.9"
 nonebot2 = "^2.3.0"
 nonebot-plugin-alconna = ">=0.38.2,<1.0.0"
-nonebot-plugin-session = "^0.3.0"
-nonebot-plugin-userinfo = "^0.2.0"
+nonebot-plugin-uninfo = ">=0.4.0,<1.0.0"
 nonebot-plugin-orm = ">=0.7.0,<1.0.0"
 Pillow = "^10.0.0"
 
